RESOLVED FIXED161552
[Mac] RetainPtr misuse, AnimationController leaks
https://bugs.webkit.org/show_bug.cgi?id=161552
Summary [Mac] RetainPtr misuse, AnimationController leaks
Joseph Pecoraro
Reported 2016-09-02 15:12:06 PDT
RetainPtr misuse, Web/WKAnimationController leaks: $ ack 'RetainPtr.*?alloc' | grep -v adopt WebKit/mac/WebView/WebImmediateActionController.mm:260: RetainPtr<WebAnimationController> dummyController = [[WebAnimationController alloc] init]; WebKit2/UIProcess/mac/WKImmediateActionController.mm:274: RetainPtr<WKAnimationController> dummyController = [[WKAnimationController alloc] init]; These should be adopted on allocation.
Attachments
[PATCH] Proposed Fix (3.58 KB, patch)
2016-09-02 15:13 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-09-02 15:13:04 PDT
Created attachment 287824 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2016-09-02 15:46:09 PDT
Comment on attachment 287824 [details] [PATCH] Proposed Fix Clearing flags on attachment: 287824 Committed r205378: <http://trac.webkit.org/changeset/205378>
WebKit Commit Bot
Comment 3 2016-09-02 15:46:12 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4 2016-09-03 07:29:35 PDT
Comment on attachment 287824 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=287824&action=review > Source/WebKit/mac/WebView/WebImmediateActionController.mm:260 > - RetainPtr<WebAnimationController> dummyController = [[WebAnimationController alloc] init]; > - return dummyController.get(); > + RetainPtr<WebAnimationController> dummyController = adoptNS([[WebAnimationController alloc] init]); > + return dummyController.autorelease(); This should just be: return [[[WebAnimationController alloc] init] autorelease]; The RetainPtr does us no good at all. > Source/WebKit2/UIProcess/mac/WKImmediateActionController.mm:274 > - RetainPtr<WKAnimationController> dummyController = [[WKAnimationController alloc] init]; > - return dummyController.get(); > + RetainPtr<WKAnimationController> dummyController = adoptNS([[WKAnimationController alloc] init]); > + return dummyController.autorelease(); Ditto.
Joseph Pecoraro
Comment 5 2016-09-04 23:45:04 PDT
Yeah, that was dumb! Dropped RetainPtr with: https://trac.webkit.org/changeset/205427
Note You need to log in before you can comment on or make changes to this bug.