[Mac] RetainPtr misuse, AnimationController leaks https://bugs.webkit.org/show_bug.cgi?id=161552

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-09-02
Reviewed by Tim Horton.

Source/WebKit/mac:

* WebView/WebImmediateActionController.mm:
(-[WebImmediateActionController _defaultAnimationController]):

Source/WebKit2:

* UIProcess/mac/WKImmediateActionController.mm:
(-[WKImmediateActionController _defaultAnimationController]):

Canonical link: https://commits.webkit.org/179710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205378 268f45cc-cd09-0410-ab3c-d52691b4dbfc