Source/WebKit/mac/WebView/WebImmediateActionController.mm
@@ -63,8 +63,7 @@ SOFT_LINK_CLASS(QuickLookUI, QLPreviewMenuItem)
 @interface WebImmediateActionController () <QLPreviewMenuItemDelegate>
 @end
 
-@interface WebAnimationController : NSObject <NSImmediateActionAnimationController> {
-}
+@interface WebAnimationController : NSObject <NSImmediateActionAnimationController>
 @end
 
 @implementation WebAnimationController
@@ -257,8 +256,8 @@ using namespace WebCore;
 - (id <NSImmediateActionAnimationController>)_defaultAnimationController
 {
     if (_contentPreventsDefault) {
-        RetainPtr<WebAnimationController> dummyController = [[WebAnimationController alloc] init];
-        return dummyController.get();
+        RetainPtr<WebAnimationController> dummyController = adoptNS([[WebAnimationController alloc] init]);
+        return dummyController.autorelease();
     }
 
     NSURL *url = _hitTestResult.absoluteLinkURL();
